:boom: final versions for TD4 and TD5

--- a/td4/main.tex
+++ b/td4/main.tex
@@ -84,7 +84,7 @@
 	
 	\subsection*{Question 8}
 	
-	The measured data rates are probably a bit smaller because we assume ideal channel conditions with no interference, no errors, no congestion and an idealized overhead.
+	The measured data rates are probably a bit smaller because we assume ideal channel conditions with no interference, no errors, no congestion and an idealized overhead. And we assume there is no sharing of the resources with other users.
 	
 	\subsection*{Question 9}
 	
@@ -126,9 +126,9 @@
 			\hline
 			DDDSU & 12 symbols = 427.2 $\mu$s & 81 symbols = 2883.6 $\mu$s \\
 			\hline
-			DDDDDDDSUU & 12 symbols = 427.2 $\mu$s & 165 symbols = 5874 $\mu$s \\
+			DDDDDDDSUU & 12 symbols = 427.2 $\mu$s & 151 symbols = 5375.6 $\mu$s \\
 			\hline
-			DSDU & 12 symbols = 427.2 $\mu$s & 65 symbols = 2314 $\mu$s \\
+			DSDU & 12 symbols = 427.2 $\mu$s & 51 symbols = 1815.6 $\mu$s \\
 			\hline
 		\end{tabular}
 	\end{table}
